Fixed bugs, redesign, added score message

--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
 			<!--Victory-->
 			<div id="victory">
 				<h1>VICTORY!</h1>
+				<div class="scoreAlert"></div>
 				<div><button id="victoryBtn">Play again</button></div>
 			</div>
 
 			<!--Game over-->
 			<div id="gameOver">
 				<h1>GAME OVER</h1>
+				<div class="scoreAlert"></div>
 				<div><button id="gameOverBtn">Play again</button></div>
 			</div>
 	</div>
