Added reset button

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 			<div id="timer">
 				<div id="clock">1:00.00</div>
 				<div id="score"></div>
+				<span id="reset"><a href="index.html">RESET</a></span>
 			</div>
 
 				<div id="card1" class="card"></div>
