--- a/index.html
+++ b/index.html
@@ -1,52 +1,75 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Simpsons Card Game</title>
-	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
-	<script type="text/javascript" src="js/simpsons.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-</head>
-<body>
 
-	<div id="content">
+	<head>
 
-		<div id="board">
-			<div id="timer">
-				<div id="clock">1:00.00</div>
-				<div id="score"></div>
-				<span id="reset"><a href="index.html">RESET</a></span>
-			</div>
+		<title>Simpsons Card Game</title>
+		<meta charset="utf-8">
 
-				<div id="card1" class="card"></div>
-				<div id="card2" class="card"></div>
-				<div id="card3" class="card"></div>
-				<div id="card4" class="card"></div>
-				<div id="card5" class="card"></div>
-				<div id="card6" class="card"></div>
-				<div id="card7" class="card"></div>
-				<div id="card8" class="card"></div>
-				<div id="card9" class="card"></div>
-				<div id="card10" class="card"></div>
-				<div id="card11" class="card"></div>
-				<div id="card12" class="card"></div>
-			</div>
+		<!-- CSS, JS & jQuery-->
+		<link rel="stylesheet" type="text/css" href="css/styles.css">
+		<script type="text/javascript" src="js/simpsons.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-			<!--Victory-->
-			<div id="victory">
-				<h1>VICTORY!</h1>
-				<div class="scoreAlert"></div>
-				<div><button id="victoryBtn">Play again</button></div>
-			</div>
+	</head>
 
-			<!--Game over-->
-			<div id="gameOver">
-				<h1>GAME OVER</h1>
-				<div class="scoreAlert"></div>
-				<div><button id="gameOverBtn">Play again</button></div>
-			</div>
+	<body>
+
+		<div id="content">
+
+			<div id="board">
+
+				<div id="timer">
+
+					<div id="clock">1:00.00</div>
+					<div id="score"></div>
+					
+					<span id="reset">
+						<a href="index.html">RESET</a>
+					</span>
+
+				</div>
+
+					<div id="card1" class="card"></div>
+					<div id="card2" class="card"></div>
+					<div id="card3" class="card"></div>
+					<div id="card4" class="card"></div>
+					<div id="card5" class="card"></div>
+					<div id="card6" class="card"></div>
+					<div id="card7" class="card"></div>
+					<div id="card8" class="card"></div>
+					<div id="card9" class="card"></div>
+					<div id="card10" class="card"></div>
+					<div id="card11" class="card"></div>
+					<div id="card12" class="card"></div>
+
+				</div>
+
+				<!--Victory-->
+				<div id="victory">
+
+					<h1>VICTORY!</h1>
+					<div class="scoreAlert"></div>
+
+					<div>
+						<button id="victoryBtn">Play again</button>
+					</div>
+
+				</div>
+
+				<!--Game over-->
+				<div id="gameOver">
+
+					<h1>GAME OVER</h1>
+					<div class="scoreAlert"></div>
+
+					<div>
+						<button id="gameOverBtn">Play again</button>
+					</div>
+				
+				</div>
+		</div>
 	</div>
-</div>
 
-</body>
+	</body>
 </html>
